fix: letter-spacing

--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -8,7 +8,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04px;
 
   color: #45413e;
   -webkit-font-smoothing: antialiased;
